[gd_scene load_steps=17 format=3 uid="uid://7v5jiybjrlkl"]

[ext_resource type="Script" uid="uid://bexi8qx87vns3" path="res://UI/game_view.gd" id="1_lqkpn"]
[ext_resource type="Theme" uid="uid://co1s85nypo7on" path="res://UI/default_font_theme.tres" id="2_ri753"]
[ext_resource type="Theme" uid="uid://csdr5ul5lmxw0" path="res://UI/readability_font_theme.tres" id="3_27j1k"]
[ext_resource type="Script" path="res://UI/post_processing.gd" id="3_dgskv"]
[ext_resource type="Shader" uid="uid://c7jc6g65ws5pi" path="res://Shaders/post_process.gdshader" id="4_u3b6e"]
[ext_resource type="Script" uid="uid://lhxpah8mvpgj" path="res://UI/level_loader.gd" id="5_4eh1a"]
[ext_resource type="PackedScene" uid="uid://drwswyc7ed01p" path="res://UI/dialogue_system.tscn" id="5_4fmj7"]
[ext_resource type="PackedScene" uid="uid://lgsnoy1y1gsg" path="res://Debug/debug_master_menu.tscn" id="6_ri6ga"]
[ext_resource type="Texture2D" uid="uid://d0y21i35gd2rk" path="res://Assets/2D_Assets/Menu_Art/settings_fence.png" id="7_yww0m"]
[ext_resource type="PackedScene" uid="uid://i81c6hyopfog" path="res://UI/menu_displayer.tscn" id="8_77qhn"]
[ext_resource type="Script" uid="uid://bx8wkgx47tjj6" path="res://UI/game_camera.gd" id="8_gjcnd"]
[ext_resource type="PackedScene" uid="uid://bc3p2wg2lxxy1" path="res://Audio/Music/music_manager.tscn" id="9_4eh1a"]
[ext_resource type="PackedScene" uid="uid://ceygtcy2sj7uq" path="res://Characters/Player/player_spawner.tscn" id="11_qrf3k"]
[ext_resource type="PackedScene" uid="uid://d01verpwnpp0o" path="res://Audio/UI/ui_sounds.tscn" id="12_k7f6d"]
[ext_resource type="PackedScene" uid="uid://c46y87jtli80e" path="res://Audio/SFX/sound_effects_pool.tscn" id="17_27j1k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjcnd"]
shader = ExtResource("4_u3b6e")
shader_parameter/offset_scale = 0.0800000038
shader_parameter/noise_scale = 3.0000001425
shader_parameter/distortion_samples = 8
shader_parameter/drunkness = 0.150000007125
shader_parameter/bleakness = 0.0

[node name="GameView" type="Node"]
process_mode = 3
script = ExtResource("1_lqkpn")
default_font_theme = ExtResource("2_ri753")
readability_font_theme = ExtResource("3_27j1k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PostProcessing" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_gjcnd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dgskv")

[node name="DialogueSystem" parent="CanvasLayer" instance=ExtResource("5_4fmj7")]
unique_name_in_owner = true
process_mode = 3
mouse_filter = 2
theme = ExtResource("2_ri753")

[node name="SchmearFrame" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = -538.0
offset_top = -306.0
offset_right = 2458.0
offset_bottom = 1386.0
texture = ExtResource("7_yww0m")

[node name="MenuDisplayer" parent="CanvasLayer" instance=ExtResource("8_77qhn")]
unique_name_in_owner = true

[node name="LoadedLevel" type="Node" parent="."]
script = ExtResource("5_4eh1a")

[node name="Debug" type="Node" parent="."]
process_mode = 3

[node name="DebugMasterMenu" parent="Debug" instance=ExtResource("6_ri6ga")]

[node name="GameCamera" type="Camera3D" parent="."]
current = true
fov = 55.0
script = ExtResource("8_gjcnd")
follow_distance = 4.0

[node name="AudioListener3D" type="AudioListener3D" parent="GameCamera"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, -2)

[node name="PlayerSpawner" parent="." instance=ExtResource("11_qrf3k")]

[node name="UI_Sounds" parent="." instance=ExtResource("12_k7f6d")]
process_mode = 3
bus = &"Master"

[node name="MusicManager" parent="." instance=ExtResource("9_4eh1a")]
process_mode = 3

[node name="SoundEffectsPool" parent="." instance=ExtResource("17_27j1k")]
